crates/squealy/tests/compile_fail/insert_select_omits_required_column.stderr
error[E0277]: `INSERT … SELECT` must list every required (non-null, no-default) column of the target table
  --> tests/compile_fail/insert_select_omits_required_column.rs:16:39
   |
16 |     let _query = conn.to::<Account>().insert_select(
   |                                       ^^^^^^^^^^^^^ the trait `squealy::list::CoversColumn<AccountEmail, _>` is not implemented for `HNil`
   |
   = note: add the missing required column(s) to the `INSERT … SELECT` target column list
help: the following other types implement trait `squealy::list::CoversColumn<T, Index>`
  --> src/list.rs
   |
   |   impl<T, Tail> CoversColumn<T, Here> for HCons<T, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<T, Tail>` implements `squealy::list::CoversColumn<T, squealy::Here>`
   |
   | / impl<T, Head, Tail, Index> CoversColumn<T, There<Index>> for HCons<Head, Tail> where
   | |     Tail: CoversColumn<T, Index>
   | |________________________________^ `HCons<Head, Tail>` implements `squealy::list::CoversColumn<T, squealy::There<Index>>`
   = note: required for `HCons<AccountName, HNil>` to implement `squealy::list::CoversColumn<AccountEmail, squealy::There<_>>`
   = note: required for `HCons<AccountEmail, HNil>` to implement `squealy::AllContained<HCons<AccountName, HNil>, HCons<squealy::There<_>, HNil>>`
   = note: 1 redundant requirement hidden
   = note: required for `HCons<AccountName, HCons<AccountEmail, HNil>>` to implement `squealy::AllContained<HCons<AccountName, HNil>, HCons<squealy::Here, HCons<squealy::There<_>, HNil>>>`
note: required by a bound in `__SquealyAccountWriteBuilder::<'conn, Conn, HNil, UpdateColumns, Filters, FilterState, __SquealyAccountNameWriteInsertState, __SquealyAccountEmailWriteInsertState, __SquealyAccountNameWriteUpdateState, __SquealyAccountEmailWriteUpdateState>::insert_select`
  --> tests/compile_fail/insert_select_omits_required_column.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyAccountWriteBuilder::<'conn, Conn, HNil, UpdateColumns, Filters, FilterState, __SquealyAccountNameWriteInsertState, __SquealyAccountEmailWriteInsertState, __SquealyAccountNameWriteUpdateState, __SquealyAccountEmailWriteUpdateState>::insert_select`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
